--- a/spotify_clone_v1/client/package.json
+++ b/spotify_clone_v1/client/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "react": "^18.1.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^17.0.2",
     "react-scripts": "^2.1.3",
+    "spotify-web-api-node": "^5.0.2",
+    "spotify-web-playback": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
