--- a/spotify_clone_v1/server/package.json
+++ b/spotify_clone_v1/server/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "lyrics-finder": "^21.7.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
