--- a/spotify_clone_v1/server/package.json
+++ b/spotify_clone_v1/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "devStart": "nodemon server.js",
@@ -13,7 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.18.1",
     "lyrics-finder": "^21.7.0",
     "react": "^17.0.2",
@@ -22,5 +21,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
-  }
+  },
+  "description": ""
 }
