--- a/netflix_clone/client/package.json
+++ b/netflix_clone/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.10.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.35.1",
     "web-vitals": "^1.0.1"
