--- a/netflix_clone/api/package.json
+++ b/netflix_clone/api/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
