--- a/the_plug/frontend/package.json
+++ b/the_plug/frontend/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "^5.0.1",
+    "react-router-bootstrap": "^0.25.0",
+    "react-scripts": "^3.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
